istio/staging/istio-gtw.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http-redirect
      protocol: HTTP
    hosts:
    - "privacy-proxy-server.<YOUR_DOMAIN>-staging.eu"
    - "*.services.<YOUR_DOMAIN>-staging.eu"
    - "*.service.<YOUR_DOMAIN>-staging.eu"
    tls:
      httpsRedirect: true # sends 301 redirect for http requests

  - port:
      number: 443
      name: https-services
      protocol: HTTPS
    hosts:
    - "*.services.<YOUR_DOMAIN>-staging.eu"
    tls:
      mode: SIMPLE # enables HTTPS on this port
      credentialName: services-<YOUR_DOMAIN>-staging-tls
      minProtocolVersion: TLSV1_2
      cipherSuites: [
        TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,
        TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384,
        TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305_SHA256,
        TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,
        TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384,
        TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305_SHA256
      ]
  - port:
      number: 443
      name: https-privacy-proxy
      protocol: HTTPS
    hosts:
    - "privacy-proxy-server.<YOUR_DOMAIN>-staging.eu"
    tls:
      mode: SIMPLE # enables HTTPS on this port
      credentialName: privacy-proxy-<YOUR_DOMAIN>-staging-tls
      minProtocolVersion: TLSV1_2
      cipherSuites: [
        TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,
        TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384,
        TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305_SHA256,
        TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,
        TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384,
        TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305_SHA256
      ]
  - port:
      number: 443
      name: https-service
      protocol: HTTPS
    hosts:
    - "*.service.<YOUR_DOMAIN>-staging.eu"
    tls:
      mode: SIMPLE # enables HTTPS on this port
      credentialName: service-<YOUR_DOMAIN>-staging-tls
      minProtocolVersion: TLSV1_2
      cipherSuites: [
        TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,
        TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384,
        TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305_SHA256,
        TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,
        TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384,
        TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305_SHA256
      ]
  - port: # for use with GKE Ingress and GoogleHC
      number: 80
      name: http-all
      protocol: HTTP
    hosts:
    - '*'
